# SiliconCasino

./: .env.example  .gitignore  DEPLOY_RAILWAY.md  Dockerfile  PRODUCT_SPEC.md  README (1).md  ROADMAP.md  TECHNICAL_ARCHITECTURE.md  docker-compose.yml  main.py  pyproject.toml  railway.json  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_predictions_trivia.py  003_phase2_features.py  004_phase3_indexes.py  005_phase3_features.py
backend/: config.py  main.py
backend/api/routes/: __init__.py  admin.py  auth.py  codegolf.py  poker.py  (+9 more)
backend/core/: admin_auth.py  exceptions.py  metrics.py  rate_limiter.py  security.py
backend/db/: database.py  query_optimizer.py
backend/middleware/: __init__.py  rate_limit.py
backend/services/: analytics_service.py  collusion_service.py  crypto_service.py  event_store.py  moltbook.py  notification_service.py  oracle.py  referral_service.py  spectator.py  tournament_service.py  wallet_service.py  withdrawal_service.py
docs/: API.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: index.html  manifest.json  offline.html  sw.js
frontend/src/: App.tsx  api.ts  index.css  store.ts
scripts/: load_test.py  run_bots.py  seed_markets.py
tests/: conftest.py
tests/integration/: test_api_auth.py  test_api_poker.py
tests/unit/: test_betting.py  test_codegolf_engine.py  test_deck.py  test_hand_evaluator.py  test_poker_engine.py  test_prediction_engine.py  test_rake.py  test_rate_limiter.py  test_tournament.py  test_trivia_engine.py
(+42 files in other folders)
